--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   -->
   <base href="/furniture_test/">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Revolutionizing how furniture is bought">
@@ -27,6 +29,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
+  
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>suteableventures</title>
