--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/furniture_test/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -29,7 +27,6 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>suteableventures</title>
