--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 
   <title>suteableventures</title>
   <link rel="manifest" href="manifest.json">
+   <script type="text/javascript">window.flutterWebRenderer = "html";</script>
+  <script src="flutter_bootstrap.js" async></script>
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+ 
 </body>
 </html>
